# evennia-mud-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml
commands/: README.md
htmlcov/: d_06f6d63d1a46c1f1_urls_py.html  d_165b0f9c08634598_urls_py.html  d_420baf620e3fcd9b_help_entries_py.html  d_671edb11804a6490_accounts_py.html  d_671edb11804a6490_channels_py.html  d_671edb11804a6490_characters_py.html  d_671edb11804a6490_objects_py.html  d_6a31816d04deed5f_urls_py.html  d_db55fb346a923761_urls_py.html  index.html  status.json
scripts/: play.sh  play.tin  reset.sh  test.sh
server/: README.md
server/conf/: settings.py
server/logs/: README.md
web/: README.md
web/static/: README.md
web/static/rest_framework/images/: README.md
web/templates/: README.md
web/templates/website/: README.md
world/: README.md  batch_cmds.ev
